fixed lack of space after comma in taxo wrap by adding unicode space. removed old portfolio code from script.js

--- a/assets/_/components/sass/_layout.scss
+++ b/assets/_/components/sass/_layout.scss
@@ -299,7 +299,7 @@ section#main_content {
 			display: inline;
 		}
 		.taxoterm:after {
-			content: ", ";
+			content: ",\0020";
 		}
 		.taxoterm:last-child:after {
 			content: "";
